# Unexpected_LIDAR_SeriesD

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions_two_ota_fat_16mb.csv  sdkconfig.defaults
.chat_modes/unexpected_lidar_mode/: README.md  changelog.md  external_docs.md  few_shots.md  indexed_summary.md  ingest_list.json  system_prompt.txt  ui_reference.md  user_prompt_template.md
.github/: copilot-instructions.md
.github/agents/: dispatcher_lvgl.agent.md
.github/prompts/: palette_json_sync_architecture.prompt.md  plan-esp32WebFatfsExpansion.prompt.md  plan-restApiWebUi.prompt.md  rest_rgb_json_get_plan.prompt.md  todo-restApiWebUi.prompt.md
docs/: AnkleBiter2.md  MCP23017_README.md  MCP23017_future_features.md  MCP23017_integration.md  MCP23017_v2_README.md  MCP23017_v3_batching_and_bank_mode.md  dispatcher_pointer_pool.md  io_encoder.md  io_heading_control.md  io_motor_control.md  io_ultrasonic.md  ultrasonic.json
main/: CMakeLists.txt  Kconfig.projbuild  USB-UART_bridge.c  dispatcher.c  dispatcher.h  dispatcher_module.h  dispatcher_pool.c  dispatcher_pool.h  dispatcher_pool_config.json  idf_component.yml  io_battery.c  io_rgb.c  io_rgb.cpp  io_rgb.h  io_usb.h  main-bridge.c  main.c  modules.def  rgb_anim.h  rgb_anim_all.c
main/dispatcher/: dispatcher_allocator.c  dispatcher_module.c  dispatcher_module.h  dispatcher_pool.c  dispatcher_pool.h  dispatcher_pool_config.json  dispatcher_pool_test.c
main/include/: io_log.h  io_rgb.h  io_ultrasonic.h  io_usb_msc.h  io_wifi_ap.h  mod_line_sensor_window.h
main/plugins/: dispatcher_allocator.h  dispatcher_pool_test.c  dispatcher_pool_test.h  io_MCP23017.c  io_MCP23017.h  io_battery.c  io_battery.h  io_fatfs.c  io_fatfs.h  io_gpio.c  io_gpio.h  io_i2c_oled.c  io_i2c_oled.h  io_lidar.c  io_lidar.h  io_log.c  io_rgb.c  io_uart0.c  io_uart0.h  io_ultrasonic.c  io_ultrasonic.h  io_usb.c  io_usb_cdc.c  io_usb_cdc.h  io_usb_cdc_msc.c  io_usb_cdc_msc.h  io_usb_msc.c  io_usb_msc.h  io_wifi_ap.c  mcp23017_test.c  mcp23017_test.h  mod_line_sensor_window.c  mod_line_sensor_window.h  usb_fatfs_architecture.md
main/plugins/RPLIDAR/: lidar_coordinator.c  lidar_coordinator.h  lidar_message_builder.c  lidar_message_builder.h  lidar_message_builder_backup.c  lidar_protocol_cmd.h  lidar_protocol_rsp.h  lidar_response_parser.c  lidar_response_parser.h  thijs_rplidar.h
main/plugins/battery/: README.md  battery_json.c  battery_json.h
main/plugins/rgb/: hsv_palette.c  hsv_palette.h  io_rgb.def  noise_data.c  noise_data.h  openSimplex2_data.h  rgb_anim.h  rgb_anim_all.c  rgb_anim_all.h  rgb_anim_aurora.c  rgb_anim_breathe.c  rgb_anim_composer.c  rgb_anim_composer.h  rgb_anim_dynamic.c  rgb_anim_dynamic.h  rgb_anim_fire.c  rgb_anim_heartbeat.c  rgb_anim_off.c  rgb_anim_solid.c  rgb_anim_water.c  rgb_plugins.def
main/plugins/rgb/premigration_backup/: hsv_palette.c  hsv_palette.h  noise_data.c  noise_data.h
main/plugins/rgb/resources/: HSV_palette_editor.ipynb  LED torus points float.csv  LED torus points.csv  battery_state_effects.md  index.html  palette_brightness_ranking.md  perlin_noise_data.h  torus_points float.h  torus_points.h  update_torus_header.ipynb
main/plugins/wifi/: rest_context.h  rest_endpoints.def  wifi_http_server.c  wifi_http_server.h  wifi_sse.c  wifi_sse.h
main/plugins/wifi/resources/: Battery_Levels.json  Battery_Levels_Template.html  Noise_Curves.json  battery_levels_widget.js  chartjs_dragx_demo.html  color_palettes.json  console.css  console.js  curve_widget.js  curves_demo.html  hsv_curve_editor.js  index.html  irojs_color_picker_demo.html  line_sensor_panel.js  rgbAnimationsEditor.js  rgb_animations.json  rgb_animations_editor.html  rgb_ui.js  sse_helpers.js  sse_manager.js
main/src/: MCP23017.c  MCP23017.h  MCP23017_v2.c  MCP23017_v2.h  UMSeriesD_idf.c
main/ui/: ui_core.c  ui_core.h  ui_hello.c  ui_hello.h  ui_input_adapter.c  ui_input_adapter.h  ui_styles.h
main/ui/face_animations/: blink_array.c  face_off_array.c  face_on_array.c  face_on_sprite_sheet.c  standby_face_array.c
main/ui/pages/: pages.def  ui_page.h  ui_page_template.c  ui_page_template.h  ui_pages.h
scripts/: add-mcp23017.ps1  update-mcp23017.ps1
tools/: led_blur_demo_notebook.ipynb
